*SVN*

* Add support for virtual enumerations that don't need to be backed by the database

*0.0.2* (September 26th, 2007)

* Move test fixtures out of the test application root directory

* Convert dos newlines to unix newlines

*0.0.1* (August 4th, 2007)

* Initial public release

* Add/refactor unit tests

* Add documentation